# acas

./: Cargo.toml  flake.nix
acas-gui/: Cargo.toml  index.html  style.css
acas-gui/src/: app.rs
acas-gui/src-tauri/: Cargo.toml  tauri.conf.json
acas-gui/src-tauri/src/: main.rs
src/: cmp.rs  constant.rs  helpers.rs  lib.rs  rational_expressions.rs  simplify.rs  tests.rs
src/parse/: mod.rs
src/print/: mod.rs
src/simplify/: ops.rs
