[package]
name = "acas"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "acas-gui", "acas-gui/src-tauri" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
num = "0.4.0"
smallvec = "1.10.0"
tracing = "0.1.37"

[dev-dependencies]
tracing-subscriber = "0.3.16"
